# ParallelMandelbrot

./: .gitignore  CMakeLists.txt  Readme.md  main.cpp  mandelbrot.cpp  mandelbrot.h  mandelbrot.tga  performance.csv  tga.cpp  tga.h
